# rust-server-exercise

./: .env  .gitignore  Cargo.toml  flake.nix
.sqlx/: query-2e61ff827d4585c2ceb487fdb681c60b93cfee080aa0ba0ae57744ab1ed27c97.json  query-9f7d9a0325b9686b2820fff84eb8fe08b07d3214d1274a99c8ce86dbe64332cb.json  query-a95b1f745c7d054ff464e2d3b5f17dbf7e3aecc76c0742a62454cea8be7d0243.json
migrations/: 20241212204446_users.up.sql  20241215004302_chirps.down.sql  20241215004302_chirps.up.sql  20241219045350_passwords.down.sql  20241219045350_passwords.up.sql  20241223040247_refresh_tokens.down.sql  20241223040247_refresh_tokens.up.sql  20241229155727_chirpy_red.down.sql  20241229155727_chirpy_red.up.sql
src/: admin.rs  api.rs  auth.rs  jwt.rs  list_dir.rs  main.rs  middlewarez.rs  queries.rs  state.rs
