[package]
name = "rust-server-exercise"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["fs"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["fs"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "time", "uuid" ] }
dotenvy = "0.15.7"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
time = { version = "0.3.37", features = ["macros", "parsing", "serde", "serde-human-readable", "serde-well-known"] }
time-macros = { version = "0.2.0-alpha.1" }
password-auth = "1.0.0"
